# my-nix-flake-templates

./: flake.nix  generate_readme.rb  generate_readme.sh  readme.md
gleam/: flake.nix  gleam.toml
gleam/src/: gleamflake.gleam
go/: .gitignore  default.nix
go-tmp/: default.nix  flake.nix  go.mod  main.go  shell.nix
haskell-simple/: CHANGELOG.md  hs-example.cabal
haskell-simple/app/: Main.hs
haskell/src/: Lib.hs
janet/: .gitignore  Makefile  proj-name.janet  project.janet
ocaml/: dune-project  flake.nix  helloworld.opam
ocaml/test/: dune  helloworld.ml
