cabal-version:      3.0
name:               hs-example

version:            0.0.1
license:            MIT
license-file:       LICENSE
author:             0xmycf
maintainer:         mycf.mycf.mycf@gmail.com
copyright:          2023 0xmycf
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common extensions
  default-extensions:
      BlockArguments
    , DeriveAnyClass
    , MultiWayIf
    , OverloadedLabels
    , OverloadedStrings
    , RecordWildCards
    , TemplateHaskell
    , TypeFamilies

common ghc-options
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -Wno-unused-imports

common base-dep
  build-depends:
      base ^>=4.20.2.0

executable hs-example
  import:           ghc-options
  import:           extensions
  import:           base-dep
  import:           base-dep
  main-is:          Main.hs
  build-depends:
    -- if some tests are needed
      QuickCheck
    , hspec
  hs-source-dirs:   app
  default-language: GHC2024
